# gropes

./: Makefile.am  bootstrap  configure.ac
data/: Makefile.am  fi.dy.gropes.service  gropes.desktop  org.gropes.service
debian/: README.Debian  changelog  control  copyright  gpsnav.links  rules
debian/.svn/: dir-wcprops  entries
debian/.svn/text-base/: changelog.svn-base  control.svn-base
debian/.svn/wcprops/: README.Debian.svn-work  changelog.svn-work  compat.svn-work  control.svn-work  copyright.svn-work  dirs.svn-work  docs.svn-work  gpsnav-doc.docs.svn-work  gpsnav-doc.install.svn-work  rules.svn-work
include/.svn/: dir-wcprops  entries
include/.svn/text-base/: Makefile.am.svn-base
include/.svn/wcprops/: Makefile.am.svn-work
include/gpsnav/: Makefile.am  coord.h  gpsnav.h  map.h  pixcache.h
include/gpsnav/.svn/: dir-wcprops  entries
m4/.svn/: dir-wcprops  entries
m4/.svn/text-base/: Makefile.am.svn-base
m4/.svn/wcprops/: Makefile.am.svn-work  libcurl.m4.svn-work
src/: Makefile.am
src/.svn/: dir-wcprops  entries
src/.svn/wcprops/: Makefile.am.svn-work
src/gropes/: Makefile.am  gropes-maptool-expedia.c  gropes-maptool-hel-kartta.c  gropes-maptool-karttapaikka.c  gropes-maptool-oikotie.c  gropes-maptool-ui-mericd.c  gropes-maptool-ui-mericd.h  gropes-maptool-ui-oikotie.c  gropes-maptool-ui-oikotie.h  gropes-maptool-ui.c  gropes-maptool-ui.h  gropes-maptool.c  gropes.c  gropes.h  item.c  item.h  map.c  mapcache.c  mapcache.h  ui.c  ui.h  ui_gtk.c  ui_hildon.c
src/gropes/.svn/: dir-wcprops  entries
src/gropes/.svn/wcprops/: Makefile.am.svn-work  gropes-maptool-expedia.c.svn-work  gropes-maptool-hel-kartta.c.svn-work  gropes-maptool-oikotie.c.svn-work  gropes-maptool.c.svn-work  gropes.c.svn-work
src/libgpsnav/: Makefile.am  datum.c  gpsnav-config.in  gpsnav.c  map-mericd.c  map.c  mapdb.c  pixcache.c
src/libgpsnav/.svn/: dir-wcprops  entries
src/libgpsnav/.svn/text-base/: gpsnav.c.svn-base  map-mericd.c.svn-base  map-raster.c.svn-base
src/libgpsnav/.svn/wcprops/: Makefile.am.svn-work  datum.c.svn-work  gpsnav-config.in.svn-work  gpsnav.c.svn-work  map-mericd.c.svn-work  map-raster.c.svn-work  map.c.svn-work  mapdb.c.svn-work  pixcache.c.svn-work
src/libgpsnav/proj4/: Makefile.am  pj_list.h
src/libgpsnav/proj4/.svn/: dir-wcprops  entries
src/libgpsnav/proj4/.svn/wcprops/: Makefile.am.svn-work  README.svn-work  REL_050319.svn-work  emess.c.svn-work  lib_proj.h.svn-work  lproj.c.svn-work  lproj.h.svn-work  pj_list-orig.h.svn-work  pj_list.h.svn-work
src/libgpsnav/proj4/azimuthal/.svn/: dir-wcprops  entries
src/libgpsnav/proj4/azimuthal/.svn/wcprops/: PJ_aeqd.c.svn-work  PJ_aitoff.c.svn-work  PJ_geos.c.svn-work  PJ_gilbert.c.svn-work  PJ_gnom.c.svn-work  PJ_hammer.c.svn-work  PJ_laea.c.svn-work  PJ_mod_ster.c.svn-work  PJ_nsper.c.svn-work  PJ_nzmg.c.svn-work  PJ_ortho.c.svn-work  PJ_rouss.c.svn-work  PJ_stere.c.svn-work  PJ_sterea.c.svn-work  PJ_wag7.c.svn-work  PJ_wag9.c.svn-work
src/libgpsnav/proj4/conic/.svn/: dir-wcprops  entries
src/libgpsnav/proj4/conic/.svn/wcprops/: PJ_aea.c.svn-work  PJ_bipc.c.svn-work  PJ_bonne.c.svn-work  PJ_eqdc.c.svn-work  PJ_hall.c.svn-work  PJ_imw_p.c.svn-work  PJ_kocc.c.svn-work  PJ_lcc.c.svn-work  PJ_lcca.c.svn-work  PJ_poly.c.svn-work  PJ_rpoly.c.svn-work  PJ_sconics.c.svn-work
src/libgpsnav/proj4/cylinder/.svn/: dir-wcprops  entries
src/libgpsnav/proj4/cylinder/.svn/wcprops/: PJ_ardn_cls.c.svn-work  PJ_braun2.c.svn-work  PJ_cass.c.svn-work  PJ_cc.c.svn-work  PJ_cea.c.svn-work  PJ_cubic.c.svn-work  PJ_cyl_stere.c.svn-work  PJ_eqc.c.svn-work  PJ_labrd.c.svn-work  PJ_lsat.c.svn-work  PJ_merc.c.svn-work  PJ_mill.c.svn-work  PJ_mill_2.c.svn-work  PJ_mill_per.c.svn-work  PJ_ocea.c.svn-work  PJ_omerc.c.svn-work  PJ_somerc.c.svn-work  PJ_stmerc.c.svn-work  PJ_tcc.c.svn-work  PJ_tcea.c.svn-work  PJ_tmerc.c.svn-work  PJ_tob_sqr.c.svn-work
src/libgpsnav/proj4/misc/.svn/: dir-wcprops  entries
src/libgpsnav/proj4/misc/.svn/wcprops/: PJ_airy.c.svn-work  PJ_apian2.c.svn-work  PJ_armadillo.c.svn-work  PJ_august.c.svn-work  PJ_bacon.c.svn-work  PJ_chamb.c.svn-work  PJ_dummy.c.svn-work  PJ_eisen.c.svn-work  PJ_four1.c.svn-work  PJ_guyou.c.svn-work  PJ_lagrng.c.svn-work  PJ_larr.c.svn-work  PJ_lask.c.svn-work  PJ_nocol.c.svn-work  PJ_ob_tran.c.svn-work  PJ_oea.c.svn-work  PJ_tpeqd.c.svn-work  PJ_vandg.c.svn-work  PJ_vandg2.c.svn-work  PJ_vandg4.c.svn-work
src/libgpsnav/proj4/pseudo/.svn/: dir-wcprops  entries
src/libgpsnav/proj4/pseudo/.svn/wcprops/: PJ_baker.c.svn-work  PJ_baranyi.c.svn-work  PJ_baranyi4.c.svn-work  PJ_boggs.c.svn-work  PJ_collg.c.svn-work  PJ_crast.c.svn-work  PJ_denoy.c.svn-work  PJ_eck1.c.svn-work  PJ_eck2.c.svn-work  PJ_eck3.c.svn-work  PJ_eck4.c.svn-work  PJ_eck5.c.svn-work  PJ_equi_moll.c.svn-work  PJ_erdi_ksz.c.svn-work  PJ_fahey.c.svn-work  PJ_fc-loerr.c.svn-work  PJ_fouc_s.c.svn-work  PJ_four2.c.svn-work  PJ_gins8.c.svn-work  PJ_gn_sinu.c.svn-work  PJ_goode.c.svn-work  PJ_hatano.c.svn-work  PJ_holzel.c.svn-work  PJ_loxim.c.svn-work  PJ_maurer.c.svn-work  PJ_mayr.c.svn-work  PJ_mbt_fps.c.svn-work  PJ_mbtfpp.c.svn-work  PJ_mbtfpq.c.svn-work  PJ_mcb_s3.c.svn-work  PJ_moll.c.svn-work  PJ_nell.c.svn-work  PJ_nell_h.c.svn-work  PJ_oxford.c.svn-work  PJ_putp2.c.svn-work  PJ_putp3.c.svn-work  PJ_putp4p.c.svn-work  PJ_putp5.c.svn-work  PJ_putp6.c.svn-work  PJ_robin.c.svn-work  (+12 more)
src/libgpsnav/proj4/support/: pj_auth.c
src/libgpsnav/proj4/support/.svn/: dir-prop-base  dir-wcprops  entries
src/libgpsnav/proj4/support/.svn/wcprops/: pj_adjlon.c.svn-work  pj_auth.c.svn-work  pj_deriv.c.svn-work  pj_dmstor.c.svn-work  pj_ell_set.c.svn-work  pj_ellps.c.svn-work  pj_errno.c.svn-work  pj_factors.c.svn-work  pj_fwd.c.svn-work  pj_gauss.c.svn-work  pj_init.c.svn-work  pj_inv.c.svn-work  pj_list.c.svn-work  pj_mdist.c.svn-work  pj_msfn.c.svn-work  pj_param.c.svn-work  pj_phi2.c.svn-work  pj_pr_list.c.svn-work  pj_rtodms.c.svn-work  pj_strerrno.c.svn-work  pj_trans.c.svn-work  pj_translate.c.svn-work  pj_tsfn.c.svn-work  pj_units.c.svn-work  pj_zpoly1.c.svn-work
(+6 files in other folders)
