## Makefile.am -- Process this file with automake to produce Makefile.in

SUBDIRS = . src m4 include data

EXTRA_DIST = \
	bootstrap \
	CodingStyle \
	intltool-extract.in \
	intltool-merge.in \
	intltool-update.in \
	debian/changelog \
	debian/control \
	debian/copyright \
	debian/rules \
	debian/gropes.links

MAINTAINERCLEANFILES = Makefile.in aclocal.m4 \
        config.guess config.h.in config.sub configure \
        install-sh ltmain.sh missing mkinstalldirs depcomp

AUTOMAKE_OPTIONS = 1.5
