## Makefile.am -- Process this file with automake to produce Makefile.in

MAINTAINERCLEANFILES = Makefile.in

noinst_LTLIBRARIES	= libproj.la
libproj_la_SOURCES      = \
	cylinder/PJ_merc.c cylinder/PJ_tmerc.c \
	\
	support/pj_adjlon.c support/pj_auth.c support/pj_dmstor.c \
	support/pj_ellps.c support/pj_ell_set.c support/pj_errno.c \
	support/pj_fwd.c support/pj_gauss.c support/pj_init.c \
	support/pj_inv.c support/pj_list.c support/pj_mdist.c \
	support/pj_msfn.c support/pj_param.c support/pj_phi2.c \
	support/pj_strerrno.c support/pj_trans.c \
	support/pj_tsfn.c support/pj_units.c support/pj_zpoly1.c \
	support/pj_factors.c support/pj_deriv.c support/pj_pr_list.c \
	support/pj_translate.c support/pj_rtodms.c

noinst_HEADERS		= lib_proj.h lproj.h pj_list.h
